--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -2,25 +2,25 @@
   color: "7057ff"
   description: "Good for newcomers"
 - name: "help wanted"
-  color: "008672"
+  color: "e99695"
   description: "Extra attention is needed"
 - name: "Type: Bug"
   color: "d73a4a"
   description: "Bug or Bug fixes"
 - name: "Type: Feature"
-  color: "a2eeef"
+  color: "26C6DA"
   description: "New feature or request"
 - name: "Type: Documentation"
   color: "0075ca"
   description: "Documentation only changes"
 - name: "Type: Refactoring"
-  color: "f9d0c4"
+  color: "FFEE58"
   description: "A code change that neither fixes a bug nor adds a feature"
 - name: "Type: Testing"
-  color: "f9d0c4"
+  color: "FFCA28"
   description: "Adding missing tests or correcting existing tests"
 - name: "Type: CI"
-  color: "f9d0c4"
+  color: "DCE775"
   description: "Changes to CI configuration files and scripts"
 - name: "Type: Question"
   color: "d876e3"
@@ -35,13 +35,13 @@
   color: "d73a4a"
   description: "Vulnerability disclosure or Fixing security issue"
 - name: "Type: Performance"
-  color: "f9d0c4"
+  color: "9CCC65"
   description: "Improving performance"
 - name: "Type: Dependencies"
-  color: "f9d0c4"
+  color: "0D47A1"
   description: "Dependency issues or Changes to dependency files"
 - name: "Priority: High"
-  color: "d93f0b"
+  color: "E53935"
   description: "High priority"
 - name: "Priority: Medium"
   color: "fbca04"
@@ -50,13 +50,13 @@
   color: "0e8a16"
   description: "Low priority"
 - name: "Status: Inactive(Abandoned)"
-  color: "000000"
+  color: ffffff"
   description: "The issue or Pull Request is wontfix"
 - name: "Status: Inactive(Duplicate)"
-  color: "000000"
+  color: "ffffff"
   description: "This issue or Pull Request already exists"
 - name: "Status: Inactive(Invalid)"
-  color: "000000"
+  color: "ffffff"
   description: "This issue or Pull Request is invalid"
 - name: "Status: Blocked"
   color: "ee0701"
@@ -68,5 +68,5 @@
   color: "0e8a16"
   description: "The issue or Pull Request is completed"
 - name: "Status: Todo"
-  color: "fbca04"
+  color: "0e8a16"
   description: "The issue or Pull Request is in todo"
