Add Type: Change label

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -10,6 +10,9 @@
 - name: "Type: Feature"
   color: "26C6DA"
   description: "New feature or request"
+- name: "Type: Change"
+  color: "FBCA04"
+  description: "Changes to existing feature"
 - name: "Type: Documentation"
   color: "0075ca"
   description: "Documentation only changes"
