--- a/.github/workflows/label-sync.yml
+++ b/.github/workflows/label-sync.yml
@@ -6,9 +6,11 @@ on:
       - "main"
     paths:
       - ".github/labels.yml"
+      - ".github/workflows/label-sync.yml"
   pull_request:
     paths:
       - ".github/labels.yml"
+      - ".github/workflows/label-sync.yml"
 
 jobs:
   label-sync:
