--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   release:
     name: Release
-    if: startsWith(${{ github.event.head_commit.message }}, 'Release ')
+    if: "startsWith(${{ github.event.head_commit.message }}, 'Release ')"
     runs-on: ubuntu-latest
     permissions:
       contents: write
