--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -14,7 +14,7 @@ jobs:
     if: (github.event.issue.pull_request != null) && github.event.comment.user.login == 'KenCir' && github.event.comment.body == '!github approve'
     runs-on: ubuntu-latest
     env:
-      PR_URL: ${{ github.event.pull_request.html_url }}
+      PR_URL: ${{ github.event.issue.pull_request.html_url }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Checkout
