--- a/.github/workflows/issue-status.yml
+++ b/.github/workflows/issue-status.yml
@@ -10,21 +10,21 @@ on:
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  TODO_LABEL: "Status: Todo"
-  IN_PROGRESS_LABEL: "Status: In Progress"
-  COMPLETED_LABEL: "Status: Completed"
-  BLOCKED_LABEL: "Status: Blocked"
-  INVALID_LABEL: "Status: Inactive(Invalid)"
-  DUPLICATE_LABEL: "Status: Inactive(Duplicate)"
-  ABANDONED_LABEL: "Status: Inactive(Abandoned)"
+  TODO_LABEL: "'Status: Todo'"
+  IN_PROGRESS_LABEL: "'Status: In Progress'"
+  COMPLETED_LABEL: "'Status: Completed'"
+  BLOCKED_LABEL: "'Status: Blocked'"
+  INVALID_LABEL: "'Status: Inactive(Invalid)'"
+  DUPLICATE_LABEL: "'Status: Inactive(Duplicate)'"
+  ABANDONED_LABEL: "'Status: Inactive(Abandoned)'"
 
 jobs:
-  issue_labels:
+  add_todo_label_on_issue:
+    name: Add Todo label # issueが再度開かれたら、Todoに変更
     runs-on: ubuntu-latest
+    if: github.event.action == 'reopened'
     steps:
-      - name: Add Todo label # issueが再度開かれたら、Todoに変更
-        if: github.event.action == 'reopened'
-        uses: actions/github-script@v7
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -63,9 +63,12 @@ jobs:
               name: ${{ env.ABANDONED_LABEL }}
             })
 
-      - name: Add In Progress label # 誰かがアサインされたら、In Progressに変更
-        if: github.event.action == 'assigned'
-        uses: actions/github-script@v7
+  add_in_progress_label_on_issue:
+    name: Add In Progress label # 誰かがアサインされたら、In Progressに変更
+    runs-on: ubuntu-latest
+    if: github.event.action == 'assigned'
+    steps:
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -83,9 +86,19 @@ jobs:
               name: ${{ env.TODO_LABEL }}
             })
 
-      - name: Add Completed label # issueがクローズされたら、Completedに変更
-        if: github.event.action == 'closed'
-        uses: actions/github-script@v7
+            github.issues.removeLabel({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: ${{ env.BLOCKED_LABEL }}
+            })
+
+  add_completed_label_on_issue:
+    name: Add Completed label # issueがクローズされたら、Completedに変更
+    runs-on: ubuntu-latest
+    if: github.event.action == 'closed'
+    steps:
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
