--- a/.github/workflows/issue-status.yml
+++ b/.github/workflows/issue-status.yml
@@ -19,12 +19,12 @@ env:
   ABANDONED_LABEL: "'Status: Inactive(Abandoned)'"
 
 jobs:
-  add_todo_label_on_issue:
-    name: Add Todo label # issueが再度開かれたら、Todoに変更
+  issue_stauts_label:
     runs-on: ubuntu-latest
-    if: github.event.action == 'reopened'
     steps:
-      - uses: actions/github-script@v7
+      - if: github.event.action == 'reopened'
+        name: Add Todo label # issueが再度開かれたら、Todoに変更
+        uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -63,12 +63,9 @@ jobs:
               name: ${{ env.ABANDONED_LABEL }}
             })
 
-  add_in_progress_label_on_issue:
-    name: Add In Progress label # 誰かがアサインされたら、In Progressに変更
-    runs-on: ubuntu-latest
-    if: github.event.action == 'assigned'
-    steps:
-      - uses: actions/github-script@v7
+      - if: github.event.action == 'assigned'
+        name: Add In Progress label # 誰かがアサインされたら、In Progressに変更
+        uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -93,12 +90,9 @@ jobs:
               name: ${{ env.BLOCKED_LABEL }}
             })
 
-  add_completed_label_on_issue:
-    name: Add Completed label # issueがクローズされたら、Completedに変更
-    runs-on: ubuntu-latest
-    if: github.event.action == 'closed'
-    steps:
-      - uses: actions/github-script@v7
+      - if: github.event.action == 'closed'
+        name: Add Completed label # issueがクローズされたら、Completedに変更
+        uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -128,4 +122,95 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               name: ${{ env.BLOCKED_LABEL }}
+            })
+
+      - if: (github.event.action == 'assigned' || github.event.action == 'closed') && contains(github.event.issue.labels.name, env.TODO_LABEL)
+        name: Remove Todo label # In ProgressまたはCompletedに変更されたら、Todoを削除
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ env.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.removeLabel({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: ${{ env.TODO_LABEL }}
+            })
+
+      - if: (github.event.action == 'reopened' || github.event.action == 'closed') && contains(github.event.issue.labels.name, env.IN_PROGRESS_LABEL)
+        name: Remove In Progress label # TodoまたはCompletedに変更されたら、In Progressを削除
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ env.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.removeLabel({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: ${{ env.IN_PROGRESS_LABEL }}
+            })
+
+      - if: (github.event.action == 'reopened' || github.event.action == 'assigned') && contains(github.event.issue.labels.name, env.COMPLETED_LABEL)
+        name: Remove Completed label # TodoまたはIn Progressに変更されたら、Completedを削除
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ env.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.removeLabel({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: ${{ env.COMPLETED_LABEL }}
+            })
+
+      - if: (github.event.action == 'assigned' || github.event.action == 'closed') && contains(github.event.issue.labels.name, env.BLOCKED_LABEL)
+        name: Remove Blocked label # In ProgressまたはCompleted変更されたら、Blockedを削除
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ env.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.removeLabel({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: ${{ env.BLOCKED_LABEL }}
+            })
+
+      - if: (github.event.action == 'reopened' || github.event.action == 'assigned') && contains(github.event.issue.labels.name, env.INVALID_LABEL)
+        name: Remove Invalid label # TodoまたはIn Progressに変更されたら、Invalidを削除
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ env.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.removeLabel({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: ${{ env.INVALID_LABEL }}
+            })
+
+      - if: (github.event.action == 'reopened' || github.event.action == 'assigned') && contains(github.event.issue.labels.name, env.DUPLICATE_LABEL)
+        name: Remove Duplicate label # TodoまたはIn Progressに変更されたら、Duplicateを削除
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ env.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.removeLabel({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: ${{ env.DUPLICATE_LABEL }}
+            })
+
+      - if: (github.event.action == 'reopened' || github.event.action == 'assigned') && contains(github.event.issue.labels.name, env.ABANDONED_LABEL)
+        name: Remove Abandoned label # TodoまたはIn Progressに変更されたら、Abandonedを削除
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ env.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.removeLabel({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: ${{ env.ABANDONED_LABEL }}
             })
