--- a/.github/workflows/issue-status.yml
+++ b/.github/workflows/issue-status.yml
@@ -22,6 +22,8 @@ jobs:
   issue_stauts_label:
     runs-on: ubuntu-latest
     steps:
+      - run: echo ${{ github.event.issue }}
+
       - if: github.event.action == 'reopened'
         name: Add Todo label # issueが再度開かれたら、Todoに変更
         uses: actions/github-script@v7
