--- a/.github/workflows/issue-status.yml
+++ b/.github/workflows/issue-status.yml
@@ -22,9 +22,12 @@ jobs:
   issue_stauts_label:
     runs-on: ubuntu-latest
     steps:
-      - run: echo toJSON(${{ github.event.issue }})
+      - name: Get the event JSON
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github.event.issue) }}
+        run: |
+          echo "$GITHUB_CONTEXT"
       - run: echo ${{ github.event.issue.labels.name }}
-
       - if: github.event.action == 'reopened'
         name: Add Todo label # issueが再度開かれたら、Todoに変更
         uses: actions/github-script@v7
