--- a/.github/workflows/issue-status.yml
+++ b/.github/workflows/issue-status.yml
@@ -19,7 +19,8 @@ env:
   ABANDONED_LABEL: "'Status: Inactive(Abandoned)'"
 
 jobs:
-  issue_stauts_label:
+  test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - name: Get the event JSON
@@ -27,10 +28,13 @@ jobs:
           GITHUB_CONTEXT: ${{ toJson(github.event.issue) }}
         run: |
           echo "$GITHUB_CONTEXT"
-      - run: echo ${{ github.event.issue.labels.name }}
-      - if: github.event.action == 'reopened'
-        name: Add Todo label # issueが再度開かれたら、Todoに変更
-        uses: actions/github-script@v7
+
+  add_todo_label_on_issue:
+    name: Add Todo label # issueが再度開かれたら、Todoに変更
+    if: github.event.action == 'reopened'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -41,9 +45,12 @@ jobs:
               labels: [${{ env.TODO_LABEL }}]
             })
 
-      - if: github.event.action == 'assigned'
-        name: Add In Progress label # 誰かがアサインされたら、In Progressに変更
-        uses: actions/github-script@v7
+  add_in_progress_label_on_issue:
+    name: Add In Progress label # issueがアサインされたら、In Progressに変更
+    if: github.event.action == 'assigned'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -54,9 +61,12 @@ jobs:
               labels: [${{ env.IN_PROGRESS_LABEL }}]
             })
 
-      - if: github.event.action == 'closed'
-        name: Add Completed label # issueがクローズされたら、Completedに変更
-        uses: actions/github-script@v7
+  add_completed_label_on_issue:
+    name: Add Completed label # issueがクローズされたら、Completedに変更
+    if: github.event.action == 'closed'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -67,9 +77,12 @@ jobs:
               labels: [${{ env.COMPLETED_LABEL }}]
             })
 
-      - if: (github.event.action == 'assigned' || github.event.action == 'closed') && contains(github.event.issue.labels.name, env.TODO_LABEL)
-        name: Remove Todo label # In ProgressまたはCompletedに変更されたら、Todoを削除
-        uses: actions/github-script@v7
+  remove_todo_label_on_issue:
+    name: Remove Todo label # In ProgressまたはCompletedに変更されたら、Todoを削除
+    if: "${{ (github.event.action == 'assigned' || github.event.action == 'closed') && contains(github.event.issue.labels.*.name, 'Stauts: Todo') }}"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -80,9 +93,12 @@ jobs:
               name: ${{ env.TODO_LABEL }}
             })
 
-      - if: (github.event.action == 'reopened' || github.event.action == 'closed') && contains(github.event.issue.labels.name, env.IN_PROGRESS_LABEL)
-        name: Remove In Progress label # TodoまたはCompletedに変更されたら、In Progressを削除
-        uses: actions/github-script@v7
+  remove_in_progress_label_on_issue:
+    name: Remove In Progress label # TodoまたはCompletedに変更されたら、In Progressを削除
+    if: "${{ (github.event.action == 'reopened' || github.event.action == 'closed') && contains(github.event.issue.labels.*.name, 'Status: In Progress') }}"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -93,9 +109,12 @@ jobs:
               name: ${{ env.IN_PROGRESS_LABEL }}
             })
 
-      - if: (github.event.action == 'reopened' || github.event.action == 'assigned') && contains(github.event.issue.labels.name, env.COMPLETED_LABEL)
-        name: Remove Completed label # TodoまたはIn Progressに変更されたら、Completedを削除
-        uses: actions/github-script@v7
+  remove_completed_label_on_issue:
+    name: Remove Completed label # TodoまたはIn Progressに変更されたら、Completedを削除
+    if: "${{ (github.event.action == 'reopened' || github.event.action == 'assigned') && contains(github.event.issue.labels.*.name, 'Status: Completed') }}"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -106,9 +125,12 @@ jobs:
               name: ${{ env.COMPLETED_LABEL }}
             })
 
-      - if: (github.event.action == 'assigned' || github.event.action == 'closed') && contains(github.event.issue.labels.name, env.BLOCKED_LABEL)
-        name: Remove Blocked label # In ProgressまたはCompleted変更されたら、Blockedを削除
-        uses: actions/github-script@v7
+  remove_blocked_label_on_issue:
+    name: Remove Blocked label # In ProgressまたはCompleted変更されたら、Blockedを削除
+    if: "${{ (github.event.action == 'assigned' || github.event.action == 'closed') && contains(github.event.issue.labels.*.name, 'Status: Blocked') }}"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -119,9 +141,12 @@ jobs:
               name: ${{ env.BLOCKED_LABEL }}
             })
 
-      - if: (github.event.action == 'reopened' || github.event.action == 'assigned') && contains(github.event.issue.labels.name, env.INVALID_LABEL)
-        name: Remove Invalid label # TodoまたはIn Progressに変更されたら、Invalidを削除
-        uses: actions/github-script@v7
+  remove_inactive_invalid_label_on_issue:
+    name: Remove Inactive label # TodoまたはIn Progressに変更されたら、Inactive(Invalid)を削除
+    if: "${{ (github.event.action == 'reopened' || github.event.action == 'assigned') && (contains(github.event.issue.labels.*.name, 'Status: Inactive(Invalid)')) }}"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -132,9 +157,12 @@ jobs:
               name: ${{ env.INVALID_LABEL }}
             })
 
-      - if: (github.event.action == 'reopened' || github.event.action == 'assigned') && contains(github.event.issue.labels.name, env.DUPLICATE_LABEL)
-        name: Remove Duplicate label # TodoまたはIn Progressに変更されたら、Duplicateを削除
-        uses: actions/github-script@v7
+  remove_inactive_duplicate_label_on_issue:
+    name: Remove Inactive label # TodoまたはIn Progressに変更されたら、Inactive(Duplicate)を削除
+    if: "${{ (github.event.action == 'reopened' || github.event.action == 'assigned') && (contains(github.event.issue.labels.*.name, 'Status: Inactive(Duplicate)')) }}"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
@@ -145,9 +173,12 @@ jobs:
               name: ${{ env.DUPLICATE_LABEL }}
             })
 
-      - if: (github.event.action == 'reopened' || github.event.action == 'assigned') && contains(github.event.issue.labels.name, env.ABANDONED_LABEL)
-        name: Remove Abandoned label # TodoまたはIn Progressに変更されたら、Abandonedを削除
-        uses: actions/github-script@v7
+  remove_inactive_abandoned_label_on_issue:
+    name: Remove Inactive label # TodoまたはIn Progressに変更されたら、Inactive(Abandoned)を削除
+    if: "${{ (github.event.action == 'reopened' || github.event.action == 'assigned') && (contains(github.event.issue.labels.*.name, 'Status: Inactive(Abandoned)')) }}"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ env.GITHUB_TOKEN }}
           script: |
