--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   auto-approve:
-    if: (github.event.issue.pull_request != null) && github.event.comment.user.login == 'KenCir' && github.event.comment.body == '!github approve'
+    if: (github.event.issue.pull_request != null) && github.event.comment.user.login == 'KenCir' && github.event.comment.body == '!approve'
     runs-on: ubuntu-latest
     env:
       PR_URL: ${{ github.event.issue.pull_request.html_url }}
