--- a/.github/workflows/issue-status-label.yml
+++ b/.github/workflows/issue-status-label.yml
@@ -93,6 +93,22 @@ jobs:
               labels: [${{ env.ABANDONED_LABEL }}]
             })
 
+  add_inactive_duplicate_label_on_issue:
+    name: Add Inactive(Duplicate) label # issueがduplicateでクローズされたら、Completedに変更
+    if: github.event.action == 'closed' && github.event.issue.state_reason == 'duplicate'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v7
+        with:
+          github-token: ${{ env.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.addLabels({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: [${{ env.DUPLICATE_LABEL }}]
+            })
+
   remove_todo_label_on_issue:
     name: Remove Todo label # In ProgressまたはCompletedに変更されたら、Todoを削除
     if: "${{ (github.event.action == 'assigned' || github.event.action == 'closed') && contains(github.event.issue.labels.*.name, 'Status: Todo') }}"
