--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -73,3 +73,27 @@
 - name: "Status: Todo"
   color: "0e8a16"
   description: "The issue or Pull Request is in todo"
+- name: 'github_actions'
+  color: '000000'
+  description: 'Pull requests that update GitHub Actions code'
+- name: 'javascript'
+  color: '0e8a16'
+  description: 'Pull requests that update JavaScript code'
+- name: 'PR: In Progress'
+  color: '0e8a16'
+  description: 'Work is in progress on this pull request'
+- name: 'PR: Review'
+  color: 'fbca04'
+  description: 'Waiting for review from reviewers'
+- name: 'PR: Ready'
+  color: '2da44e'
+  description: 'The pull request is ready and work is complete'
+- name: 'PR: Changes Requested'
+  color: 'ee0701'
+  description: 'Changes have been requested on this pull request'
+- name: 'PR: Blocked'
+  color: 'ee0701'
+  description: 'This pull request is blocked'
+- name: 'PR: Merged'
+  color: '6f42c1'
+  description: 'This pull request has been merged'
